# lalDB

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  compile-release.sh  compile.sh
includes/: laldb.hpp
includes/DataRepresentation/: DataRepresentation.hpp  DataRepresentation.tpp
includes/Datastore/: Datastore.hpp
includes/Loader/: Loader.hpp  Parser.hpp
srcs/Datastore/: Datastore.cpp
srcs/Loader/: Loader.cpp  Parser.cpp  _Loader.h  _internal.h
srcs/Loader/Serializer/: Serializer.cpp  Serializer.hpp  Serializer.tpp
tests/: .gitignore  ATest.hpp  CMakeLists.txt  main.cpp  tests.sh
tests/DataQuery/: tests.cpp
tests/DataRepresentation/: tests.cpp
tests/Datastore/: tests.cpp
tests/Loader/: tests.cpp
tests/Serializer/: tests.cpp
